secondfile/objects/Competitive_Intelligence__c.object
<CustomObject>
    <description>Stores records related to quotes for like services from competitors</description>
    <fields>
        <fullName>Access_Type_CompIntel__c</fullName>
        <inlineHelpText>Indicates if the mix of Ethernet vs TDM for access circuits in this deal. Select Not Applicable for Mobility-related deals.</inlineHelpText>
        <label>Access Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Only Ethernet</fullName>
                </value>
                <value>
                    <fullName>Only TDM</fullName>
                </value>
                <value>
                    <fullName>Mostly Ethernet</fullName>
                </value>
                <value>
                    <fullName>Mostly TDM</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comparable_AT_T_Product__c</fullName>
        <label>Comparable AT&amp;T Product</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AIA</fullName>
                </value>
                <value>
                    <fullName>ANIRA</fullName>
                </value>
                <value>
                    <fullName>ASE</fullName>
                </value>
                <value>
                    <fullName>AVPN</fullName>
                </value>
                <value>
                    <fullName>COLO</fullName>
                </value>
                <value>
                    <fullName>IoT</fullName>
                </value>
                <value>
                    <fullName>IP Flex</fullName>
                </value>
                <value>
                    <fullName>MIS</fullName>
                </value>
                <value>
                    <fullName>Mobility - IRU</fullName>
                </value>
                <value>
                    <fullName>Mobility - CRU</fullName>
                </value>
                <value>
                    <fullName>NBFW</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitive_Intelligence_Comment__c</fullName>
        <inlineHelpText>Enter any related notes and comments relevant to this record.</inlineHelpText>
        <label>Competitive Intelligence Comment</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Competitor_Name__c</fullName>
        <inlineHelpText>Please provide the name of the Competitor from which this quote was sourced.</inlineHelpText>
        <label>Competitor Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AT&amp;T (direct sales)</fullName>
                </value>
                <value>
                    <fullName>BT and Orange</fullName>
                </value>
                <value>
                    <fullName>Century Link</fullName>
                </value>
                <value>
                    <fullName>Charter</fullName>
                </value>
                <value>
                    <fullName>Comcast</fullName>
                </value>
                <value>
                    <fullName>Cox</fullName>
                </value>
                <value>
                    <fullName>Earthlink</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
                <value>
                    <fullName>Sprint</fullName>
                </value>
                <value>
                    <fullName>T-Mobile</fullName>
                </value>
                <value>
                    <fullName>Time Warner</fullName>
                </value>
                <value>
                    <fullName>Verizon</fullName>
                </value>
                <value>
                    <fullName>Virtela</fullName>
                </value>
                <value>
                    <fullName>Windstream</fullName>
                </value>
                <value>
                    <fullName>XO</fullName>
                </value>
                <value>
                    <fullName>Zayo</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Quote_Source__c</fullName>
        <inlineHelpText>Please select to indicate where you obtained this intelligence.</inlineHelpText>
        <label>Competitor Quote Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Solution Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_s_Product_Name__c</fullName>
        <inlineHelpText>Input the product name used by the competitor for the product/service being quoted (not the AT&amp;T product name).</inlineHelpText>
        <label>Competitor&apos;s Product Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Quote_was_Issued__c</fullName>
        <label>Date Quote was Issued</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Access_Speeds_CompIntel__c</fullName>
        <inlineHelpText>Indicates if there is variance in the requested Access speed from site to site in this deal.</inlineHelpText>
        <label>Deal Access Speeds</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Access_Type_CompIntel__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Access speed same for all sites in deal</fullName>
                </value>
                <value>
                    <fullName>Sites in deal have different Access speeds</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Sites_Lines__c</fullName>
        <inlineHelpText>Input the number of sites/lines/nodes that are included in the competitor&apos;s quote.</inlineHelpText>
        <label>Number of Sites/Lines</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quoted_MRC__c</fullName>
        <inlineHelpText>Input the dollar amount of the Monthly Recurring Charge found on the competitor&apos;s quote</inlineHelpText>
        <label>Quoted MRC</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sites_Access_Speed_CompIntel__c</fullName>
        <inlineHelpText>Field available only when field &apos;Deal Access Speeds&apos; is set to &quot;Access speed same for all sites in deal&quot;.

This field indicates ALL sites in the quote/deal are the same Access speed.

Update notes and attach file when multiple Access speeds quoted.</inlineHelpText>
        <label>Site(s) Access Speed</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Deal_Access_Speeds_CompIntel__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>T1</fullName>
                </value>
                <value>
                    <fullName>2x T1</fullName>
                </value>
                <value>
                    <fullName>3x T1</fullName>
                </value>
                <value>
                    <fullName>4x T1</fullName>
                </value>
                <value>
                    <fullName>5x T1</fullName>
                </value>
                <value>
                    <fullName>6x T1</fullName>
                </value>
                <value>
                    <fullName>7x T1</fullName>
                </value>
                <value>
                    <fullName>8x T1</fullName>
                </value>
                <value>
                    <fullName>T3</fullName>
                </value>
                <value>
                    <fullName>5 Mbps</fullName>
                </value>
                <value>
                    <fullName>10 Mbps</fullName>
                </value>
                <value>
                    <fullName>20 Mbps</fullName>
                </value>
                <value>
                    <fullName>50 Mbps</fullName>
                </value>
                <value>
                    <fullName>100 Mbps</fullName>
                </value>
                <value>
                    <fullName>250 Mbps</fullName>
                </value>
                <value>
                    <fullName>500 Mbps</fullName>
                </value>
                <value>
                    <fullName>600 Mbps</fullName>
                </value>
                <value>
                    <fullName>1,000 Mbps</fullName>
                </value>
                <value>
                    <fullName>&gt;1,000 Mbps</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Provider_CompetitiveIntelligenc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the name of the Account that provided this intelligence.</inlineHelpText>
        <label>Solution Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitive Intelligence</relationshipLabel>
        <relationshipName>Competitive_Intelligence</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Term_Length_months__c</fullName>
        <inlineHelpText>Input the contract term in months that was quoted by the competitor.</inlineHelpText>
        <label>Term Length (months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Competitive Intelligence</label>
    <listViews>
        <fullName>All_Competitive_Intelligence_Records</fullName>
        <columns>NAME</columns>
        <columns>Solution_Provider_CompetitiveIntelligenc__c</columns>
        <columns>Competitor_Name__c</columns>
        <columns>Competitor_s_Product_Name__c</columns>
        <columns>Comparable_AT_T_Product__c</columns>
        <columns>Quoted_MRC__c</columns>
        <columns>Number_of_Sites_Lines__c</columns>
        <columns>Term_Length_months__c</columns>
        <columns>Date_Quote_was_Issued__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Competitive Intelligence Records</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CI{0000000}</displayFormat>
        <label>Competitive Intelligence Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitive Intelligence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>